--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "hypium": "^1.0.0",
     "@ohos/hvigor": "1.0.6",
     "@ohos/hvigor-ohos-plugin": "1.0.6",
-    "@ohos/snackbar": "file:snackbar"
+    "@ohos/material-snackbar": "file:./material-snackbar"
   }
 }
